divided top and bottom  text in news divs into different divs

--- a/page1.html
+++ b/page1.html
@@ -19,11 +19,11 @@
         <div class="left">
           <div class="top">
             <img class="img-ava" src="/assets/ava-img.png" alt="avatar1" />
-            <h5>
-              Authors name <span class="grey-text">in</span> Topics name &nbsp·
-              &nbsp
-              <span class="grey-text">7 july</span>
-            </h5>
+            <h5>Authors name</h5>
+            <h5 class="grey-text">in</h5>
+            <h5>Topics name</h5>
+            <h5>&nbsp·&nbsp</h5>
+            <h5 class="grey-text">7 july</h5>
           </div>
           <div class="text">
             <h2>7 Practical CSS Tips</h2>
@@ -37,10 +37,9 @@
               <button class="javascript">
                 <p id="button-text">Java Script</p>
               </button>
-              <h4>
-                <span class="grey-text">12 min read</span> &nbsp·&nbsp
-                <span class="grey-text">Selected for you</span>
-              </h4>
+              <h4 class="grey-text">12 min read</h4>
+              <h4>&nbsp·&nbsp</h4>
+              <h4 class="grey-text">Selected for you</h4>
             </div>
             <div class="actions">
               <img
