started second page

--- a/page2.html
+++ b/page2.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Title</title>
-</head>
-<body>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <header>
+      <h3>medium alike</h3>
+    </header>
+    <section class="section-welcome">
+      <img id="back-logo" src="/assets/Logo.png" alt="arrow-back" />
+    </section>
+    <section class="news-fill">
+      <div class="news-page">
+        <div class="top-part">
+          <div class="top-left">
+            <img src="/assets/ava-img.png" alt="avatar" />
+            <div class="text-info">
+              <h3 class="authors-name">Authors name</h3>
+              <div class="text-info-grey">
+                <h5 class="grey-text">7 july</h5>
+                <h5 class="grey-text">&nbsp·&nbsp</h5>
+                <h5 class="grey-text">12 min read</h5>
+                <h5 class="grey-text">&nbsp·&nbsp</h5>
+                <h5 class="grey-text">Member-only</h5>
+              </div>
+            </div>
+          </div>
+          <div class="top-rigth">
+            <img
+              class="social-media"
+              src="/assets/LinkedIn.png"
+              alt="LinkedIn" />
+            <img
+              class="social-media"
+              src="/assets/Facebook Circled.png"
+              alt="Facebook" />
+            <img class="social-media" src="/assets/Twitter.png" alt="Twitter" />
+          </div>
+        </div>
+        <div class="top-text"></div>
+        <img src="" alt="" />
+        <div class="main-text"></div>
+        <div class="bottom-part"></div>
+      </div>
+    </section>
+    <footer>
+      <h6 class="grey-text">
+        Credits: photos from
+        <a href="https://unsplash.com/@surface">Unsplash.com</a>, icons from
+        <a href="https://icons8.com/">Icons8</a>, graphics from
+        <a
+          href="https://craftwork.design/checkout/purchase-confirmation/?payment_key=a3ba0d28aa30dfd691cd535acb1f4228"
+          >craftwork.design</a
+        >
+      </h6>
+      <h6>Made with ✨❤️ at nFactorial in 2023.</h6>
+    </footer>
     <script src="/index.js"></script>
-</body>
+  </body>
 </html>
