--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello, world!</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style-page1.css" />
   </head>
   <body>
     <header>
@@ -19,15 +19,15 @@
         <div class="left">
           <div class="top">
             <img class="img-ava" src="/assets/ava-img.png" alt="avatar1" />
-            <h5>Authors name</h5>
+            <h5 class="authors-name">Authors name</h5>
             <h5 class="grey-text">in</h5>
-            <h5>Topics name</h5>
+            <h5 class="topics name">Topics name</h5>
             <h5>&nbsp·&nbsp</h5>
-            <h5 class="grey-text">7 july</h5>
+            <h5 class="grey-text date">7 july</h5>
           </div>
           <div class="text">
-            <h2>7 Practical CSS Tips</h2>
-            <p>
+            <h2 class="article-name">7 Practical CSS Tips</h2>
+            <p class="article-summary">
               You not only learn more Python by implementing what you already
               know but, in the end, you can see how all your hard work pays off.
             </p>
@@ -37,9 +37,9 @@
               <button class="javascript">
                 <p id="button-text">Java Script</p>
               </button>
-              <h4 class="grey-text">12 min read</h4>
+              <h4 class="grey-text time-spent">12 min read</h4>
               <h4>&nbsp·&nbsp</h4>
-              <h4 class="grey-text">Selected for you</h4>
+              <h4 class="grey-text selected">Selected for you</h4>
             </div>
             <div class="actions">
               <img
@@ -60,15 +60,15 @@
         <div class="left">
           <div class="top">
             <img class="img-ava" src="/assets/ava-img.png" alt="avatar1" />
-            <h5>
-              Authors name <span class="grey-text">in</span> Topics name &nbsp·
-              &nbsp
-              <span class="grey-text">7 july</span>
-            </h5>
+            <h5 class="authors-name">Authors name</h5>
+            <h5 class="grey-text">in</h5>
+            <h5 class="topics name">Topics name</h5>
+            <h5>&nbsp·&nbsp</h5>
+            <h5 class="grey-text date">7 july</h5>
           </div>
           <div class="text">
-            <h2>7 Practical CSS Tips</h2>
-            <p>
+            <h2 class="article-name">7 Practical CSS Tips</h2>
+            <p class="article-summary">
               You not only learn more Python by implementing what you already
               know but, in the end, you can see how all your hard work pays off.
             </p>
@@ -78,10 +78,9 @@
               <button class="javascript">
                 <p id="button-text">Java Script</p>
               </button>
-              <h4>
-                <span class="grey-text">12 min read</span> &nbsp·&nbsp
-                <span class="grey-text">Selected for you</span>
-              </h4>
+              <h4 class="grey-text time-spent">12 min read</h4>
+              <h4>&nbsp·&nbsp</h4>
+              <h4 class="grey-text selected">Selected for you</h4>
             </div>
             <div class="actions">
               <img
@@ -102,15 +101,15 @@
         <div class="left">
           <div class="top">
             <img class="img-ava" src="/assets/ava-img.png" alt="avatar1" />
-            <h5>
-              Authors name <span class="grey-text">in</span> Topics name &nbsp·
-              &nbsp
-              <span class="grey-text">7 july</span>
-            </h5>
+            <h5 class="authors-name">Authors name</h5>
+            <h5 class="grey-text">in</h5>
+            <h5 class="topics name">Topics name</h5>
+            <h5>&nbsp·&nbsp</h5>
+            <h5 class="grey-text date">7 july</h5>
           </div>
           <div class="text">
-            <h2>7 Practical CSS Tips</h2>
-            <p>
+            <h2 class="article-name">7 Practical CSS Tips</h2>
+            <p class="article-summary">
               You not only learn more Python by implementing what you already
               know but, in the end, you can see how all your hard work pays off.
             </p>
@@ -120,10 +119,9 @@
               <button class="javascript">
                 <p id="button-text">Java Script</p>
               </button>
-              <h4>
-                <span class="grey-text">12 min read</span> &nbsp·&nbsp
-                <span class="grey-text">Selected for you</span>
-              </h4>
+              <h4 class="grey-text time-spent">12 min read</h4>
+              <h4>&nbsp·&nbsp</h4>
+              <h4 class="grey-text selected">Selected for you</h4>
             </div>
             <div class="actions">
               <img
