now content for page 1 is taken from js file

--- a/page1.html
+++ b/page1.html
@@ -15,129 +15,7 @@
       <h1>Hello, world!</h1>
     </section>
     <section class="section-news">
-      <div class="news">
-        <div class="left">
-          <div class="top">
-            <img class="img-ava" src="/assets/ava-img.png" alt="avatar1" />
-            <h5 class="authors-name">Authors name</h5>
-            <h5 class="grey-text">in</h5>
-            <h5 class="topics name">Topics name</h5>
-            <h5>&nbsp·&nbsp</h5>
-            <h5 class="grey-text date">7 july</h5>
-          </div>
-          <div class="text">
-            <h2 class="article-name">7 Practical CSS Tips</h2>
-            <p class="article-summary">
-              You not only learn more Python by implementing what you already
-              know but, in the end, you can see how all your hard work pays off.
-            </p>
-          </div>
-          <div class="info-bottom">
-            <div class="info">
-              <button class="javascript">
-                <p id="button-text">Java Script</p>
-              </button>
-              <h4 class="grey-text time-spent">12 min read</h4>
-              <h4>&nbsp·&nbsp</h4>
-              <h4 class="grey-text selected">Selected for you</h4>
-            </div>
-            <div class="actions">
-              <img
-                class="img-action"
-                src="/assets/LinkedIn.png"
-                alt="LinkedIn" />
-              <img
-                class="img-action"
-                src="/assets/Facebook Circled.png"
-                alt="Facebook" />
-              <img class="img-action" src="/assets/Twitter.png" alt="Twitter" />
-            </div>
-          </div>
-        </div>
-        <img class="img-text" src="/assets/Img.png" alt="laptop" />
-      </div>
-      <div class="news">
-        <div class="left">
-          <div class="top">
-            <img class="img-ava" src="/assets/ava-img.png" alt="avatar1" />
-            <h5 class="authors-name">Authors name</h5>
-            <h5 class="grey-text">in</h5>
-            <h5 class="topics name">Topics name</h5>
-            <h5>&nbsp·&nbsp</h5>
-            <h5 class="grey-text date">7 july</h5>
-          </div>
-          <div class="text">
-            <h2 class="article-name">7 Practical CSS Tips</h2>
-            <p class="article-summary">
-              You not only learn more Python by implementing what you already
-              know but, in the end, you can see how all your hard work pays off.
-            </p>
-          </div>
-          <div class="info-bottom">
-            <div class="info">
-              <button class="javascript">
-                <p id="button-text">Java Script</p>
-              </button>
-              <h4 class="grey-text time-spent">12 min read</h4>
-              <h4>&nbsp·&nbsp</h4>
-              <h4 class="grey-text selected">Selected for you</h4>
-            </div>
-            <div class="actions">
-              <img
-                class="img-action"
-                src="/assets/LinkedIn.png"
-                alt="LinkedIn" />
-              <img
-                class="img-action"
-                src="/assets/Facebook Circled.png"
-                alt="Facebook" />
-              <img class="img-action" src="/assets/Twitter.png" alt="Twitter" />
-            </div>
-          </div>
-        </div>
-        <img class="img-text" src="/assets/Img.png" alt="laptop" />
-      </div>
-      <div class="news">
-        <div class="left">
-          <div class="top">
-            <img class="img-ava" src="/assets/ava-img.png" alt="avatar1" />
-            <h5 class="authors-name">Authors name</h5>
-            <h5 class="grey-text">in</h5>
-            <h5 class="topics name">Topics name</h5>
-            <h5>&nbsp·&nbsp</h5>
-            <h5 class="grey-text date">7 july</h5>
-          </div>
-          <div class="text">
-            <h2 class="article-name">7 Practical CSS Tips</h2>
-            <p class="article-summary">
-              You not only learn more Python by implementing what you already
-              know but, in the end, you can see how all your hard work pays off.
-            </p>
-          </div>
-          <div class="info-bottom">
-            <div class="info">
-              <button class="javascript">
-                <p id="button-text">Java Script</p>
-              </button>
-              <h4 class="grey-text time-spent">12 min read</h4>
-              <h4>&nbsp·&nbsp</h4>
-              <h4 class="grey-text selected">Selected for you</h4>
-            </div>
-            <div class="actions">
-              <img
-                class="img-action"
-                src="/assets/LinkedIn.png"
-                alt="LinkedIn" />
-              <img
-                class="img-action"
-                src="/assets/Facebook Circled.png"
-                alt="Facebook" />
-              <img class="img-action" src="/assets/Twitter.png" alt="Twitter" />
-            </div>
-          </div>
-        </div>
-        <img class="img-text" src="/assets/Img.png" alt="laptop" />
-      </div>
+      <div id="articles"></div>
     </section>
     <footer>
       <h6 class="grey-text">
