created 2nd pages for three articles and made them take content from array

--- a/page1.html
+++ b/page1.html
@@ -27,7 +27,10 @@
           >craftwork.design</a
         >
       </h6>
-      <h6>Made with ✨❤️ at nFactorial in 2023.</h6>
+      <h6>
+        Made with ✨❤️ at
+        <a href="https://www.nfactorial.school/">nFactorial</a> in 2023.
+      </h6>
     </footer>
     <script src="/index.js"></script>
   </body>
