--- a/page2-2.html
+++ b/page2-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title</title>
+    <title>The power of doing nothing at all</title>
     <link rel="stylesheet" href="/style-page2.css" />
   </head>
   <body>
@@ -15,7 +15,8 @@
       <img id="back-logo" src="/assets/Logo.png" alt="arrow-back" />
     </section>
     <section class="news-fill">
-      <div class="news-page">
+      <div id="pageTwoArticle2"></div>
+      <!-- <div class="news-page">
         <div class="top-part">
           <div class="top-left">
             <img src="/assets/ava-img.png" alt="avatar" />
@@ -92,7 +93,7 @@
           </div>
           <img class="bookmark" src="/assets/Bookmark.png" alt="bookmark" />
         </div>
-      </div>
+      </div> -->
     </section>
     <footer>
       <h6 class="grey-text">
@@ -104,8 +105,11 @@
           >craftwork.design</a
         >
       </h6>
-      <h6>Made with ✨❤️ at nFactorial in 2023.</h6>
+      <h6>
+        Made with ✨❤️ at
+        <a href="https://www.nfactorial.school/">nFactorial</a> in 2023.
+      </h6>
     </footer>
-    <script src="/index.js"></script>
+    <script src="/index-page2-2.js"></script>
   </body>
 </html>
