cleaned up my code for 2nd page js and html

--- a/page2-0.html
+++ b/page2-0.html
@@ -15,85 +15,7 @@
       <img id="back-logo" src="/assets/Logo.png" alt="arrow-back" />
     </section>
     <section class="news-fill">
-      <div id="pageTwoArticle0"></div>
-      <!-- <div class="news-page">
-        <div class="top-part">
-          <div class="top-left">
-            <img src="/assets/ava-img.png" alt="avatar" />
-            <div class="text-info">
-              <h3 class="authors-name">Authors name</h3>
-              <div class="text-info-grey">
-                <h5 class="grey-text date">7 july</h5>
-                <h5 class="grey-text">&nbsp·&nbsp</h5>
-                <h5 class="grey-text time-spent">12 min read</h5>
-                <h5 class="grey-text">&nbsp·&nbsp</h5>
-                <h5 class="grey-text for-whom">Member-only</h5>
-              </div>
-            </div>
-          </div>
-          <div class="top-right">
-            <img
-              class="social-media"
-              src="/assets/LinkedIn.png"
-              alt="LinkedIn" />
-            <img
-              class="social-media"
-              src="/assets/Facebook Circled.png"
-              alt="Facebook" />
-            <img class="social-media" src="/assets/Twitter.png" alt="Twitter" />
-          </div>
-        </div>
-        <div class="top-text">
-          <h1 class="title">7 Practical CSS Tips</h1>
-          <h2 class="summary">
-            How product designers can break from the status quo and help our
-            planet
-          </h2>
-        </div>
-        <img class="page-image" src="/assets/Img big.png" alt="laptop" />
-        <div class="main">
-          <h4 class="subheader">Subheader</h4>
-          <p class="main-text">
-            How long are you awake in the morning before you go online? Perhaps
-            it’s while you’re still lying in bed, using a news feed or social
-            media as the needed stimulant to push you out from under the covers.
-            Or maybe you wait to open your device until after a warm shower and
-            cup of coffee. If you use sleep tracking apps, you might say you
-            never signed off in the first place.<br />
-            <br />
-            And, like millions of others during the pandemic, the internet is
-            probably what enabled you to stay in touch with family, or complete
-            entire years of work and/or school remotely. If this sounds
-            familiar, then you live in a part of the world where an internet
-            connection now counts as an essential utility — one that’s as easy
-            to take for granted as the natural gas heating your shower water or
-            the electricity powering your coffee maker.<br />
-            <br />
-
-            But if you think we’re hyperconnected today, just wait. Globally,
-            just over 55% of today’s households have an internet connection.
-            This gap between the internet haves and have-nots is referred to as
-            the digital divide, and access is skewed toward richer nations. The
-            gap is projected to close in the next decade as billions of homes
-            connect to the internet for the first time and by 2030 it’s
-            estimated that the technology industry could account for 20% of the
-            global electricity demand. This presents a troublesome dichotomy. On
-            one hand, it supports livelihoods, educations, and bolsters the
-            global economy; on the other hand, the increased usage of the apps,
-            websites, and services that we build will place an even greater
-            strain on our already-overloaded power grids.
-          </p>
-        </div>
-        <div class="bottom-part">
-          <div class="likes-comments">
-            <img src="/assets/Heart.png" alt="heart" />
-            <h5 class="likes-number grey-text">180</h5>
-            <img src="/assets/Speech Bubble.png" alt="speech" />
-            <h5 class="comment-number grey-text">12</h5>
-          </div>
-          <img class="bookmark" src="/assets/Bookmark.png" alt="bookmark" />
-        </div>
-      </div> -->
+      <div id="article"></div>
     </section>
     <footer>
       <h6 class="grey-text">
