--- a/page2-1.html
+++ b/page2-1.html
@@ -12,7 +12,9 @@
       <h3>medium alike</h3>
     </header>
     <section class="section-welcome">
-      <img id="back-logo" src="/assets/Logo.png" alt="arrow-back" />
+      <a href="/page1.html"
+        ><img id="back-logo" src="/assets/Logo.png" alt="arrow-back"
+      /></a>
     </section>
     <section class="news-fill">
       <div id="article"></div>
