renamed files and deleted unnecessary files

--- a/page1.html
+++ b/page1.html
@@ -32,6 +32,6 @@
         <a href="https://www.nfactorial.school/">nFactorial</a> in 2023.
       </h6>
     </footer>
-    <script src="/index.js"></script>
+    <script src="/page1.js"></script>
   </body>
 </html>
