--- a/page2.html
+++ b/page2.html
@@ -34,6 +34,6 @@
         <a href="https://www.nfactorial.school/">nFactorial</a> in 2023.
       </h6>
     </footer>
-    <script src="/index-page2-0.js"></script>
+    <script src="/page2.js"></script>
   </body>
 </html>
